--- a/MoinMoin/translations/pt_BR/LC_MESSAGES/messages.po
+++ b/MoinMoin/translations/pt_BR/LC_MESSAGES/messages.po
@@ -8,8 +8,8 @@ msgstr ""
 "Project-Id-Version: moin 2.0.0a0\n"
 "Report-Msgid-Bugs-To: English <moin-user@lists.sourceforge.net>\n"
 "POT-Creation-Date: 2011-07-10 21:27+0200\n"
-"PO-Revision-Date: 2011-10-31 02:05-0300\n"
-"Last-Translator: Leo Germani\n"
+"PO-Revision-Date: 2012-04-03 05:10-0300\n"
+"Last-Translator: MoinMoin:DiogenesAugusto\n"
 "Language-Team: pt_BR <LL@li.org>\n"
 "Plural-Forms: nplurals=2; plural=(n > 1)\n"
 "MIME-Version: 1.0\n"
@@ -172,7 +172,7 @@ msgstr "Itens desejados (tem link para eles, mas não existem)"
 #: MoinMoin/apps/admin/templates/admin/index.html:17
 #: MoinMoin/apps/frontend/views.py:636
 msgid "Orphaned Items"
-msgstr "Itens órfãos (existem, mas não há link para eles"
+msgstr "Itens órfãos (existem, mas não há link para eles)"
 
 #: MoinMoin/apps/admin/templates/admin/index.html:18
 #: MoinMoin/apps/admin/templates/admin/itemsize.html:4
@@ -294,7 +294,7 @@ msgstr "Nome do item alvo"
 
 #: MoinMoin/apps/frontend/views.py:531
 msgid "Refers Here"
-msgstr "Faz referencia aqui"
+msgstr "Faz referência aqui"
 
 #: MoinMoin/apps/frontend/views.py:672
 #: MoinMoin/apps/frontend/views.py:691
@@ -304,11 +304,11 @@ msgstr "Você deve fazer o login para usar esta ação: %(action)s."
 
 #: MoinMoin/apps/frontend/views.py:675
 msgid "A quicklink to this page could not be added for you."
-msgstr "Um quicklink para esta página não pode ser adicionado"
+msgstr "Um quicklink para esta página não pode ser adicionado."
 
 #: MoinMoin/apps/frontend/views.py:678
 msgid "Your quicklink to this page could not be removed."
-msgstr "O quicklink para esta página não pode ser removido"
+msgstr "O quicklink para esta página não pode ser removido."
 
 #: MoinMoin/apps/frontend/views.py:693
 msgid "You are not allowed to subscribe to an item you may not read."
@@ -410,7 +410,7 @@ msgstr "Conta criada, você pode logar agora."
 
 #: MoinMoin/apps/frontend/views.py:848
 msgid "Your user name or your email address is needed."
-msgstr "Seu nome de usuário ou endereço de email são necessários"
+msgstr "Seu nome de usuário ou endereço de email são necessários."
 
 #: MoinMoin/apps/frontend/views.py:863
 #: MoinMoin/apps/frontend/views.py:922
@@ -552,11 +552,11 @@ msgstr "Sua senha foi alterada."
 
 #: MoinMoin/apps/frontend/views.py:1161
 msgid "This openid is already in use."
-msgstr "Este OpenID está em uso"
+msgstr "Este OpenID está em uso."
 
 #: MoinMoin/apps/frontend/views.py:1165
 msgid "This username is already in use."
-msgstr "Este nome de usuário já está em uso"
+msgstr "Este nome de usuário já está em uso."
 
 #: MoinMoin/apps/frontend/views.py:1171
 msgid "This email is already in use"
@@ -882,7 +882,7 @@ msgstr "Desenho clicável: %(filename)s"
 
 #: MoinMoin/mail/sendmail.py:86
 msgid "No recipients, nothing to do"
-msgstr "Sem destinatário. Nada a fazer."
+msgstr "Sem destinatário, nada a fazer."
 
 #: MoinMoin/mail/sendmail.py:162
 #, python-format
@@ -1170,11 +1170,11 @@ msgstr "mais novas"
 
 #: MoinMoin/templates/show.html:33
 msgid "no newer revision"
-msgstr "nenhuma revisao mais nova"
+msgstr "nenhuma revisão mais nova"
 
 #: MoinMoin/templates/show.html:47
 msgid "This item exists, but it has no revisions."
-msgstr "Este item exite, mas não tem revisões"
+msgstr "Este item existe, mas não tem revisões"
 
 #: MoinMoin/templates/show.html:72
 msgid "modified"
@@ -1211,7 +1211,7 @@ msgstr "Configurações de Aparência do Wiki"
 #: MoinMoin/templates/usersettings.html:12
 #: MoinMoin/templates/usersettings.html:73
 msgid "Navigation Settings"
-msgstr "Configurações de Nvegação"
+msgstr "Configurações de Navegação"
 
 #: MoinMoin/templates/usersettings.html:13
 #: MoinMoin/templates/usersettings.html:85
@@ -1233,7 +1233,7 @@ msgstr "Acesso negado"
 
 #: MoinMoin/themes/__init__.py:55
 msgid "You are not allowed to access this resource."
-msgstr "Você não tem permissão para acessar este recurso"
+msgstr "Você não tem permissão para acessar este recurso."
 
 #: MoinMoin/themes/__init__.py:286
 msgid "anonymous"
